sender refactoring, fixes
