# worker/src/controllers/auth/method-helpers.go
@@ -24,7 +24,7 @@ type FindOrCreateResult struct {
 	TFAMethod    string
 }
 
-func FindOrCreateByCredential(credType, value string, bypassTFA bool, scope string) (*FindOrCreateResult, error) {
+func FindOrCreateByCredential(credType, value string, bypassTFA bool, scope, authSessionID string) (*FindOrCreateResult, error) {
 	ctx := context.Background()
 
 	user, _, err := credentials.FindUserByCredential(utils.Database, credType, value)
@@ -57,7 +57,7 @@ func FindOrCreateByCredential(credType, value string, bypassTFA bool, scope stri
 	}
 
 	if !bypassTFA && user.TfaMethod != "none" {
-		tfaSessionID, err := sessions.CreateTfaSession(ctx, user.ID, user.TfaMethod, 5*time.Minute)
+		tfaSessionID, err := sessions.CreateTfaSession(ctx, user.ID, user.TfaMethod, 5*time.Minute, authSessionID)
 		if err != nil {
 			return nil, errors.New("internal error")
 		}
